Perkin-UAT/force-app/main/default/objects/SFDC_Tactics__c/SFDC_Tactics__c.object-meta.xml
<CustomObject>
    <description>Specific set of tactics tied to each account that the sales manager needs to execute.  Each tactic lists specific revenue goals and products to be sold to a particular division or department.  Tasks and milestones are also attached to each tactic.</description>
    <label>Tactic</label>
    <nameField>
        <label>Tactic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tactics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>