Perkin-UAT/force-app/main/default/objects/SFDC_Tactics__c/fields/Est_Service_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Est_Service_Revenue__c</fullName>
    <label>Est Service Revenue</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>