Perkin-UAT/force-app/main/default/objects/SFDC_Tactics__c/fields/Key_Contact_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Contact Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N30000001Y6wsEAC</relationshipName>
    <type>Lookup</type>
</CustomField>