Perkin-UAT/force-app/main/default/objects/SFDC_Tactics__c/fields/Tactic_Status__c.field-meta.xml
<CustomField>
    <fullName>Tactic_Status__c</fullName>
    <label>Tactic Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Opportunity Created</fullName>
            </value>
            <value>
                <fullName>Achieved Rev. Goals</fullName>
            </value>
            <value>
                <fullName>Partial Achievement</fullName>
            </value>
            <value>
                <fullName>Lost - No Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>