Perkin-UAT/force-app/main/default/objects/SFDC_Tactics__c/listViews/ARQ_000739_SFDC_Tactics.listView-meta.xml
<ListView>
    <fullName>ARQ_000739_SFDC_Tactics</fullName>
    <filterScope>Queue</filterScope>
    <label>SupportGroup</label>
    <queue>ARQ_000670</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>